fix dynamic spacing and scaling on mobile

--- a/styles.css
+++ b/styles.css
@@ -500,9 +500,20 @@ section {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     transition: box-shadow 0.2s;
     user-select: none;
+    /* transform-origin: center center;
+    transition: transform 0.3s ease; */
 }
 
 .dragging {
     cursor: grabbing;
     box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+}
+
+@media (width < 800px) {
+    .photo {
+        height: 50%;
+        width: auto;
+        /* translate: -50% 0; */
+        /* transform: scale(0.8) translate(calc(10% - 10vw), calc(10% - 10vh)); */
+    }
 }
